kyverno-project-1/kyverno-policy-4.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-pod-labels-and-resources
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-app-label
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "All Pods must have the 'app' label."
        pattern:
          metadata:
            labels:
              app: "?*"
    - name: require-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "All containers in a Pod must define resources.requests and resources.limits for CPU and memory."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
