kyverno-project-1/kyverno-policy-5.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-namespace-env-team
spec:
  background: false
  rules:
    - name: add-dev-label
      match:
        any:
          - resources:
              kinds:
                - Namespace
              name: "*-dev*"
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(environment): "dev"
    - name: add-prod-label
      match:
        any:
          - resources:
              kinds:
                - Namespace
              name: "*-prod*"
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(environment): "prod"
    - name: add-team-annotation
      match:
        any:
          - resources:
              kinds:
                - Namespace
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(team): "unknown-team"
